# PersonalWebsite

./: .gitignore  Caddyfile  README.md  caddyfile  docker-compose.yml  index.html
backend/: CMakeLists.txt  dockerfile  main.cpp  script.py
backend/modules/: CMakeLists.txt
backend/modules/communication/: CMakeLists.txt
backend/modules/communication/include/: RestServer.hpp
backend/modules/communication/src/: RestServer.cpp
backend/modules/database/: CMakeLists.txt
backend/modules/database/include/: DatabaseManager.hpp
backend/modules/database/src/: DatabaseManager.cpp
backend/modules/yahooFApi/: CMakeLists.txt
backend/modules/yahooFApi/include/: YahooFinanceAPI.hpp
backend/modules/yahooFApi/src/: YahooFinanceAPI.cpp
backend/service/: CMakeLists.txt  main.cpp
frontend/: dockerfile  package.json
frontend/src/: App.tsx
public/: babysitterPanel.html  dividend.html  dividends.html  forBabySitters.html  forParents.html  forgetPassword.html  giris.html  gizlilik.html  howWorks.html  index.html  kullanimKosullari.html  parentsPanel.html  script.js  setPassword.html  signupBabySitter.html  signupClients.html  styles.css
